// Vitest Snapshot v1

exports[`EIcon > EIcon snapshot 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 32 32\\" class=\\"eu-icon eu-icon-arrow-down\\" style=\\"font-size: 40px; color: red;\\">
  <path fill=\\"currentColor\\" d=\\"M24.59 16.59 17 24.17V4h-2v20.17l-7.59-7.58L6 18l10 10 10-10-1.41-1.41z\\"></path>
</svg>"
`;

exports[`EIcon > should work with \`color\` prop 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 32 32\\" class=\\"eu-icon eu-icon-arrow-down\\" style=\\"font-size: 16px; color: red;\\">
  <path fill=\\"currentColor\\" d=\\"M24.59 16.59 17 24.17V4h-2v20.17l-7.59-7.58L6 18l10 10 10-10-1.41-1.41z\\"></path>
</svg>"
`;

exports[`EIcon > should work with \`size\` prop 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 32 32\\" class=\\"eu-icon eu-icon-arrow-down\\" style=\\"font-size: 40px;\\">
  <path fill=\\"currentColor\\" d=\\"M24.59 16.59 17 24.17V4h-2v20.17l-7.59-7.58L6 18l10 10 10-10-1.41-1.41z\\"></path>
</svg>"
`;

exports[`EIcon > should work with use classname 1`] = `"<i class=\\"iconfont icontest\\" style=\\"font-size: 16px; color: red;\\"></i>"`;
